# validation-framework-2

./: README.md  flake8  gitignore  gitlab-ci.yml  poetry.yml  pyproject.toml
data_validation_framework/: common.py  example_input_config.yml  operations.py  process_validations_task.py  process_validations_wheel_task.py
tests/: test_common.py  test_operations.py  test_process_validation_task.py
